[package]
name = "r6502"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
clap-num = "1.2.0"
cursive = "0.21.1"
iter_mod = "0.1.0"
log = "0.4.27"
path-absolutize = "3.1.1"
r6502lib = { path = "../r6502lib" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple-logging = "2.0.2"

[dev-dependencies]
rstest = "0.25.0"
