[package]
name = "r6502"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
clap-num = "1.2.0"
log = "0.4.27"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
path-absolutize = "3.1.1"
r6502lib = { path = "../r6502lib" }
simple-logging = "2.0.2"

[dev-dependencies]
rstest = "0.25.0"

[lints.clippy]
