[package]
name = "r6502"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
clap-num = "1.2.0"
log = "0.4.27"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
path-absolutize = "3.1.1"
r6502ui = { path = "../r6502ui" }
r6502validation = { path = "../r6502validation" }
r6502vdu = { path = "../r6502vdu" }
serde_json = "1.0.140"
simple-logging = "2.0.2"

[dev-dependencies]
rstest = "0.25.0"

[lints.clippy]
missing_errors_doc = "allow"
pedantic = { level = "deny", priority = -1 }
