[package]
name = "r6502cpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
r6502core = { path = "../r6502core" }
r6502snapshot = { path = "../r6502snapshot" }
strum = { version = "0.27.1", features = ["strum_macros"] }
strum_macros = "0.27.1"

[dev-dependencies]
rstest = "0.25.0"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
pedantic = { level = "deny", priority = -1 }
