[package]
name = "r6502hw"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dirs = "6.0.0"
log = "0.4.27"
path-absolutize = "3.1.1"
r6502config = { path = "../r6502config" }
r6502core = { path = "../r6502core" }
r6502lib = { path = "../r6502lib" }
r6502snapshot = { path = "../r6502snapshot" }

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
pedantic = { level = "deny", priority = -1 }
