[package]
name = "r6502lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
getch-rs = "0.2.0"
iter_mod = "0.1.0"
log = "0.4.27"
num-derive = "0.4.2"
num-traits = "0.2.19"
r6502validationlib = { path = "../r6502validationlib" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["strum_macros"] }
strum_macros = "0.27.1"

[dev-dependencies]
criterion = "0.6.0"
rstest = "0.25.0"

[features]
not-implemented = []

[[bench]]
name = "cpu_benchmark"
harness = false
