[package]
name = "r6502lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
chrono = "0.4.41"
cursive = "0.21.1"
dirs = "6.0.0"
iter_mod = "0.1.0"
log = "0.4.27"
num-derive = "0.4.2"
num-traits = "0.2.19"
path-absolutize = "3.1.1"
rancor = "0.1.0"
rkyv = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["strum_macros"] }
strum_macros = "0.27.1"

[dev-dependencies]
criterion = "0.6.0"
rstest = "0.25.0"

[features]
not-implemented = []

[[bench]]
name = "cpu_benchmark"
harness = false

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
pedantic = { level = "deny", priority = -1 }
