[package]
name = "r6502lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
iter_mod = "0.1.0"
log = "0.4.27"
num-derive = "0.4.2"
num-traits = "0.2.19"
r6502config = { path = "../r6502config" }
r6502core = { path = "../r6502core" }
r6502cpu = { path = "../r6502cpu" }
serde_json = "1.0.140"

[dev-dependencies]
criterion = "0.6.0"
rstest = "0.25.0"

[features]
not-implemented = []

[[bench]]
name = "cpu_benchmark"
harness = false

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
pedantic = { level = "deny", priority = -1 }
