[package]
name = "r6502snapshot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
num-derive = "0.4.2"
num-traits = "0.2.19"
r6502lib = { path = "../r6502lib" }

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
pedantic = { level = "deny", priority = -1 }
