[package]
name = "r6502ui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cursive = "0.21.1"
log = "0.4.27"
path-absolutize = "3.1.1"
r6502config = { path = "../r6502config" }
r6502core = { path = "../r6502core" }
r6502cpu = { path = "../r6502cpu" }
r6502hw = { path = "../r6502hw" }
r6502lib = { path = "../r6502lib" }
r6502snapshot = { path = "../r6502snapshot" }

[dev-dependencies]
rstest = "0.25.0"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
pedantic = { level = "deny", priority = -1 }
