[package]
name = "r6502validation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
path-absolutize = "3.1.1"
r6502lib = { path = "../r6502lib" }
r6502validationlib = { path = "../r6502validationlib" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
