
[package]
name = "r6502validation"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dirs = "6.0.0"
r6502core = { path = "../r6502core" }
rancor = "0.1.0"
rkyv = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
pedantic = { level = "deny", priority = -1 }
