[package]
name = "r6502vdu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bdf2 = "0.7.1"
bit-vec = "0.8.0"
bitflags = "2.9.1"
clap = { version = "4.5.41", features = ["derive"] }
conv2 = "0.4.2"
crossterm = "0.29.0"
log = "0.4.27"
path-absolutize = "3.1.1"
r6502config = { path = "../r6502config" }
r6502core = { path = "../r6502core" }
r6502hw = { path = "../r6502hw" }
r6502lib = { path = "../r6502lib" }
r6502snapshot = { path = "../r6502snapshot" }
rfd = "0.15.4"
sdl3 = { version = "0.14.36", features = ["ttf", "unsafe_textures"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[lints.clippy]
missing_errors_doc = "allow"
pedantic = { level = "deny", priority = -1 }
